# conan-ws-example

./: CMakeLists.txt  README.md  conanfile.py
.config/conan_config/profiles/: ubuntu-gcc-debug  ubuntu-gcc-release
.config/workspace/: ws-linux.yml
a/: CMakeLists.txt  conanfile.py
a/test_package/: CMakeLists.txt
b/: CMakeLists.txt  conanfile.py
b/test_package/: CMakeLists.txt
c/: CMakeLists.txt  conanfile.py
c/test_package/: CMakeLists.txt
d/: CMakeLists.txt  conanfile.py
d/test_package/: CMakeLists.txt
